Bug 20232 - [4.0/4.1 Regression] ICE with covariancy
Summary: [4.0/4.1 Regression] ICE with covariancy
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.0.0
: P2 normal
Target Milestone: 4.0.0
Assignee: Nathan Sidwell
URL:
Keywords: error-recovery, ice-on-invalid-code
Depends on:
Blocks:
 
Reported: 2005-02-27 12:59 UTC by Nathan Sidwell
Modified: 2005-03-01 10:02 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work: 3.4.0
Known to fail: 4.0.0
Last reconfirmed: 2005-02-27 15:34:02


Attachments
test case (63 bytes, text/plain)
2005-02-27 12:59 UTC, Nathan Sidwell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nathan Sidwell 2005-02-27 12:59:07 UTC
The attached invalid program ICEs mainline and 4.0
Comment 1 Nathan Sidwell 2005-02-27 12:59:46 UTC
Created attachment 8292 [details]
test case
Comment 2 Andrew Pinski 2005-02-27 15:34:01 UTC
Confirmed, a regression also.  It worked with 20050113.
Comment 3 GCC Commits 2005-03-01 09:57:54 UTC
Subject: Bug 20232

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	nathan@gcc.gnu.org	2005-03-01 09:57:45

Modified files:
	gcc/cp         : ChangeLog class.c cp-tree.h method.c 
	gcc/testsuite  : ChangeLog 
Added files:
	gcc/testsuite/g++.dg/inherit: covariant12.C 

Log message:
	cp:
	PR c++/20232
	* class.c (update_vtable_entry_for_fn): Don't crash on invalid
	covariancy.
	
	* cp-tree.g (THUNK_TARGET): Expand comment.
	* method.c (use_thunk): Make sure we also use the target, if that
	is a thunk.
	testsuite:
	PR c++/20232
	* g++.dg/inherit/covariant12.C: New.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/ChangeLog.diff?cvsroot=gcc&r1=1.4649&r2=1.4650
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/class.c.diff?cvsroot=gcc&r1=1.707&r2=1.708
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/cp-tree.h.diff?cvsroot=gcc&r1=1.1106&r2=1.1107
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/method.c.diff?cvsroot=gcc&r1=1.322&r2=1.323
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/ChangeLog.diff?cvsroot=gcc&r1=1.5100&r2=1.5101
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/g++.dg/inherit/covariant12.C.diff?cvsroot=gcc&r1=NONE&r2=1.1

Comment 5 Nathan Sidwell 2005-03-01 10:02:02 UTC
2005-03-01  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/20232
	* g++.dg/inherit/covariant12.C: New.