cp: 	PR c++/20232 	* class.c (update_vtable_entry_for_fn): Don't crash on invalid 	covariancy.

* cp-tree.g (THUNK_TARGET): Expand comment.
	* method.c (use_thunk): Make sure we also use the target, if that
	is a thunk.
testsuite:
	PR c++/20232
	* g++.dg/inherit/covariant12.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@95733 138bc75d-0d04-0410-961f-82ee72b054a4