gcc/cp/class.c
@@ -2048,14 +2048,17 @@ update_vtable_entry_for_fn (tree t, tree binfo, tree fn, tree* virtuals,
 	  tree thunk_binfo, base_binfo;
 
 	  /* Find the base binfo within the overriding function's
-	     return type.  */
+	     return type.  We will always find a thunk_binfo, except
+	     when the covariancy is invalid (which we will have
+	     already diagnosed).  */
 	  for (base_binfo = TYPE_BINFO (base_return),
 	       thunk_binfo = TYPE_BINFO (over_return);
-	       !SAME_BINFO_TYPE_P (BINFO_TYPE (thunk_binfo),
-				   BINFO_TYPE (base_binfo));
+	       thunk_binfo;
 	       thunk_binfo = TREE_CHAIN (thunk_binfo))
-	    continue;
-
+	    if (SAME_BINFO_TYPE_P (BINFO_TYPE (thunk_binfo),
+				   BINFO_TYPE (base_binfo)))
+	      break;
+	  
 	  /* See if virtual inheritance is involved.  */
 	  for (virtual_offset = thunk_binfo;
 	       virtual_offset;
@@ -2063,7 +2066,8 @@ update_vtable_entry_for_fn (tree t, tree binfo, tree fn, tree* virtuals,
 	    if (BINFO_VIRTUAL_P (virtual_offset))
 	      break;
 	  
-	  if (virtual_offset || !BINFO_OFFSET_ZEROP (thunk_binfo))
+	  if (virtual_offset
+	      || (thunk_binfo && !BINFO_OFFSET_ZEROP (thunk_binfo)))
 	    {
 	      tree offset = convert (ssizetype, BINFO_OFFSET (thunk_binfo));
 
